# design_patterns

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
src/strategy_pattern/: Attribute.hpp  Bird.hpp  Duck.hpp  FlyAttribute.hpp  TalkAttribute.hpp
